# cookiecutter-python

./: cookiecutter.json
{{ cookiecutter.package_name }}/: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.py  tox.ini
{{ cookiecutter.package_name }}/.github/workflows/: cpp.yml  python.yml
{{ cookiecutter.package_name }}/docs/: conf.py
{{ cookiecutter.package_name }}/src/{{ cookiecutter.module_name }}/: __init__.py
