
[build-system]
requires = [
    "setuptools>=40.6.0",
    "wheel",
    "setuptools_scm",
{%- if cookiecutter.pybind11_extensions %}
    "oldest-supported-numpy",
    "pybind11>=2.4",
{%- endif %}
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 79

[tool.isort]
skip_glob = ["docs/*"]
line_length = 79
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
